ultimo comittão monstro
feat:

adicionado dedicatória e linkzinho do linkedin do papisssss

assignature: eu mermo gdssvpp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
         rel="stylesheet">
     <title>Weather</title>
 </head>
+<div class="developer">
+    <p>made by <a href="https://www.linkedin.com/in/pablo-nogueira-9a0313205/" target="_blank">Pablo Nogueira</a></p>
+</div>
 <body>
+    
     
     <div class="container">
         <div class="search-box">
@@ -63,5 +67,9 @@
 
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+        <div class="dedicated">
+        <p>pablo loves agatha -> happy 2 years married. without u nothing of this would be possible</p>
+        </div>
 </body>
+
 </html>
